--- a/Reports/good_issue.jrxml
+++ b/Reports/good_issue.jrxml
@@ -26,6 +26,11 @@
 	<queryString>
 		<![CDATA[CALL sp_goodsissue_form($P{docDateFr},$P{docDateTo},$P{docNumFr},$P{docNumTo})]]>
 	</queryString>
+	<field name="cmpnyID" class="java.lang.String"/>
+	<field name="address" class="java.lang.String"/>
+	<field name="city" class="java.lang.String"/>
+	<field name="zipCode" class="java.lang.String"/>
+	<field name="phonefax" class="java.lang.String"/>
 	<field name="goodsreceipt_docNum" class="java.lang.Integer"/>
 	<field name="goodsreceipt_docDate" class="java.sql.Date"/>
 	<field name="custmrcode" class="java.lang.String"/>
@@ -33,7 +38,7 @@
 	<field name="goodsreceiptdetail1_whsCode" class="java.lang.String"/>
 	<field name="goodsreceiptdetail1_itemCode" class="java.lang.String"/>
 	<field name="goodsreceiptdetail1_quantity" class="java.lang.Double"/>
-	<field name="goodsreceiptdetail1_price" class="java.lang.Double"/>
+	<field name="goodsreceiptdetail1_price" class="java.math.BigDecimal"/>
 	<field name="goodsreceiptdetail1_lineTotal" class="java.lang.Double"/>
 	<field name="linenum" class="java.lang.Integer"/>
 	<field name="item_dscription" class="java.lang.String"/>
@@ -45,7 +50,6 @@
 	<field name="customer_custmrName" class="java.lang.String"/>
 	<field name="address_address" class="java.lang.String"/>
 	<field name="address_dscription" class="java.lang.String"/>
-	<field name="address" class="java.lang.String"/>
 	<field name="dscription" class="java.lang.String"/>
 	<field name="brand" class="java.lang.String"/>
 	<field name="gudang" class="java.lang.String"/>
@@ -216,9 +220,9 @@
 		<band splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="87" splitType="Stretch">
+		<band height="121" splitType="Stretch">
 			<staticText>
-				<reportElement key="staticText-2" x="10" y="38" width="70" height="21"/>
+				<reportElement key="staticText-2" x="0" y="75" width="70" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -229,7 +233,7 @@
 				<text><![CDATA[Kirim Ke      :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-4" x="329" y="38" width="80" height="18"/>
+				<reportElement key="staticText-4" x="329" y="75" width="80" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -240,7 +244,7 @@
 				<text><![CDATA[No.Dokumen :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-5" x="329" y="59" width="80" height="14"/>
+				<reportElement key="staticText-5" x="330" y="93" width="80" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -251,7 +255,7 @@
 				<text><![CDATA[Tanggal   :]]></text>
 			</staticText>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="416" y="38" width="136" height="21"/>
+				<reportElement key="textField" x="416" y="75" width="136" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -262,7 +266,7 @@
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{goodsreceipt_docNum}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField" x="80" y="59" width="249" height="14"/>
+				<reportElement key="textField" x="70" y="93" width="249" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -273,7 +277,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{address_address}]]></textFieldExpression>
 			</textField>
 			<textField pattern="d/M/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="59" width="135" height="14"/>
+				<reportElement key="textField" x="416" y="93" width="135" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -284,18 +288,20 @@
 				<textFieldExpression class="java.util.Date"><![CDATA[$F{goodsreceipt_docDate}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="10" y="5" width="319" height="23"/>
+				<reportElement key="textField" x="329" y="0" width="223" height="28"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{head}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="80" y="38" width="249" height="18"/>
+				<reportElement key="textField" x="70" y="75" width="249" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -306,7 +312,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{customer_custmrName}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-5" x="329" y="73" width="80" height="14"/>
+				<reportElement key="staticText-5" x="330" y="107" width="80" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -317,7 +323,7 @@
 				<text><![CDATA[Dari Gudang   :]]></text>
 			</staticText>
 			<textField pattern="d/M/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="73" width="135" height="14"/>
+				<reportElement key="textField" x="417" y="107" width="135" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -328,7 +334,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{gudang}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-2" x="10" y="73" width="70" height="14"/>
+				<reportElement key="staticText-2" x="0" y="107" width="70" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -339,7 +345,7 @@
 				<text><![CDATA[PO.No         :]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField" x="80" y="73" width="249" height="14"/>
+				<reportElement key="textField" x="70" y="107" width="249" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -350,7 +356,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_ref2}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-4" x="329" y="5" width="80" height="18"/>
+				<reportElement key="staticText-4" x="329" y="45" width="80" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -361,7 +367,7 @@
 				<text><![CDATA[Reference :]]></text>
 			</staticText>
 			<textField pattern="d/M/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="416" y="5" width="135" height="33"/>
+				<reportElement key="textField" x="416" y="45" width="135" height="33"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -370,6 +376,34 @@
 				</box>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_ref1}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="20" width="319" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{address}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="0" width="319" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{cmpnyID}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="35" width="319" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{city}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="50" width="319" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{phonefax}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
