--- a/Reports/good_receipt.jrxml
+++ b/Reports/good_receipt.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="48"/>
+	<property name="ireport.y" value="0"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -26,6 +26,11 @@
 	<queryString>
 		<![CDATA[CALL sp_goodsreceipt_form($P{docDateFr},$P{docDateTo},$P{docNumFr},$P{docNumTo})]]>
 	</queryString>
+	<field name="cmpnyID" class="java.lang.String"/>
+	<field name="address" class="java.lang.String"/>
+	<field name="city" class="java.lang.String"/>
+	<field name="zipCode" class="java.lang.String"/>
+	<field name="phonefax" class="java.lang.String"/>
 	<field name="goodsreceipt_docNum" class="java.lang.Integer"/>
 	<field name="goodsreceipt_docDate" class="java.sql.Date"/>
 	<field name="custmrcode" class="java.lang.String"/>
@@ -46,7 +51,6 @@
 	<field name="customer_custmrName" class="java.lang.String"/>
 	<field name="address_address" class="java.lang.String"/>
 	<field name="address_dscription" class="java.lang.String"/>
-	<field name="address" class="java.lang.String"/>
 	<field name="dscription" class="java.lang.String"/>
 	<field name="brand" class="java.lang.String"/>
 	<field name="gudang" class="java.lang.String"/>
@@ -184,9 +188,9 @@
 		<band splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="93" splitType="Stretch">
+		<band height="114" splitType="Stretch">
 			<staticText>
-				<reportElement key="staticText-2" x="10" y="38" width="70" height="21"/>
+				<reportElement key="staticText-2" x="0" y="68" width="67" height="21"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -197,7 +201,7 @@
 				<text><![CDATA[Terima Dari :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-4" x="329" y="38" width="80" height="18"/>
+				<reportElement key="staticText-4" x="328" y="68" width="80" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -208,7 +212,7 @@
 				<text><![CDATA[No.Dokumen :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-5" x="329" y="59" width="80" height="14"/>
+				<reportElement key="staticText-5" x="328" y="86" width="80" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -219,7 +223,7 @@
 				<text><![CDATA[Tanggal   :]]></text>
 			</staticText>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="416" y="38" width="136" height="21"/>
+				<reportElement key="textField" x="415" y="68" width="136" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -230,7 +234,7 @@
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{goodsreceipt_docNum}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField" x="80" y="59" width="249" height="14"/>
+				<reportElement key="textField" x="67" y="86" width="261" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -241,7 +245,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{address_address}]]></textFieldExpression>
 			</textField>
 			<textField pattern="d/M/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="59" width="135" height="14"/>
+				<reportElement key="textField" x="416" y="86" width="135" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -252,18 +256,20 @@
 				<textFieldExpression class="java.util.Date"><![CDATA[$F{goodsreceipt_docDate}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="10" y="5" width="319" height="23"/>
+				<reportElement key="textField" x="329" y="0" width="223" height="28"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{head}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="80" y="38" width="249" height="18"/>
+				<reportElement key="textField" x="67" y="68" width="261" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -274,7 +280,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{customer_custmrName}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-28" x="329" y="5" width="81" height="18"/>
+				<reportElement key="staticText-28" x="328" y="35" width="81" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -285,7 +291,7 @@
 				<text><![CDATA[Ket     :]]></text>
 			</staticText>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="5" width="135" height="33"/>
+				<reportElement key="textField" x="416" y="35" width="135" height="33"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -296,7 +302,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_comments}+" / "+$F{goodsreceipt_ref1}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-5" x="329" y="73" width="80" height="14"/>
+				<reportElement key="staticText-5" x="328" y="100" width="80" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -307,7 +313,7 @@
 				<text><![CDATA[Ke Gudang   :]]></text>
 			</staticText>
 			<textField pattern="d/M/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="73" width="135" height="14"/>
+				<reportElement key="textField" x="416" y="100" width="135" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -318,7 +324,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{gudang}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField" x="80" y="73" width="249" height="14"/>
+				<reportElement key="textField" x="67" y="100" width="261" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -329,7 +335,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_ref2}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-2" x="10" y="73" width="70" height="14"/>
+				<reportElement key="staticText-2" x="0" y="100" width="67" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -339,6 +345,34 @@
 				<textElement/>
 				<text><![CDATA[PO.No         :]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="0" y="0" width="319" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{cmpnyID}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="50" width="319" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{phonefax}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="20" width="319" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{address}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="35" width="319" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{city}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
