--- a/Reports/quantity_stock_rpt.jrxml
+++ b/Reports/quantity_stock_rpt.jrxml
@@ -35,6 +35,8 @@
 	<field name="pricename" class="java.lang.String"/>
 	<field name="price" class="java.lang.Double"/>
 	<field name="adakey" class="java.lang.String"/>
+	<sortField name="brandcode"/>
+	<sortField name="itemCode"/>
 	<variable name="no" class="java.lang.Integer" resetType="Group" resetGroup="BrandCode" calculation="DistinctCount">
 		<variableExpression><![CDATA[$F{itemCode}]]></variableExpression>
 	</variable>
