--- a/Reports/good_issue_rpt_new_xls.jrxml
+++ b/Reports/good_issue_rpt_new_xls.jrxml
@@ -38,13 +38,14 @@
 	<field name="tglQ" class="java.lang.String"/>
 	<field name="goodsreceiptdetail1_whsCode" class="java.lang.String"/>
 	<field name="goodsreceiptdetail1_itemCode" class="java.lang.String"/>
-	<field name="goodsreceiptdetail1_quantity" class="java.math.BigDecimal"/>
+	<field name="goodsreceiptdetail1_quantity" class="java.lang.Double"/>
 	<field name="goodsreceiptdetail1_price" class="java.math.BigDecimal"/>
-	<field name="goodsreceiptdetail1_lineTotal" class="java.math.BigDecimal"/>
+	<field name="goodsreceiptdetail1_lineTotal" class="java.lang.Double"/>
 	<field name="item_dscription" class="java.lang.String"/>
 	<field name="goodsreceipt_custmrCode" class="java.lang.String"/>
 	<field name="goodsreceipt_shipToCode" class="java.lang.String"/>
 	<field name="goodsreceipt_comments" class="java.lang.String"/>
+	<field name="goodsreceipt_ref2" class="java.lang.String"/>
 	<field name="customer_custmrName" class="java.lang.String"/>
 	<field name="address_address" class="java.lang.String"/>
 	<field name="address_dscription" class="java.lang.String"/>
@@ -96,7 +97,7 @@
 	<columnHeader>
 		<band height="22" splitType="Stretch">
 			<staticText>
-				<reportElement key="staticText-6" x="0" y="7" width="30" height="15"/>
+				<reportElement key="staticText-6" x="0" y="7" width="19" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -161,7 +162,7 @@
 				<text><![CDATA[Jumlah]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-9" x="30" y="7" width="112" height="15"/>
+				<reportElement key="staticText-9" x="19" y="7" width="50" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -185,6 +186,19 @@
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[WhsCode]]></text>
+			</staticText>
+			<staticText>
+				<reportElement key="staticText-9" x="69" y="7" width="73" height="15"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Reff]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -230,7 +244,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{brand}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="0" y="0" width="30" height="18"/>
+				<reportElement key="textField" x="0" y="0" width="19" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -256,7 +270,7 @@
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{goodsreceiptdetail1_quantity}]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0" isBlankWhenNull="false">
-				<reportElement key="textField" x="30" y="0" width="112" height="18"/>
+				<reportElement key="textField" x="19" y="0" width="50" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -280,6 +294,19 @@
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[":"+$F{goodsreceiptdetail1_whsCode}]]></textFieldExpression>
+			</textField>
+			<textField pattern="###0" isBlankWhenNull="false">
+				<reportElement key="textField" x="69" y="0" width="73" height="18"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_ref2}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
